# CW_3

./: README.md  pyproject.toml
tests/: test_func.py
utils/: func.py
