[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["Pvl <ivanov.pavel.1307@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.0.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
